# yaslis

./: .gitignore  LICENSE  README.md  pyproject.toml  tests.py
benchmarks/: Apple_M4_Max_20251016_162130.json  Apple_M4_Max_20251021_140920.json  Intel(R)_Xeon(R)_CPU_@_2.20GHz_20251021_112415.json
configs/: sample_books.jsonl  sample_users.jsonl
files/: eval_risc_O0.json
tests/: test_book.py  test_library.py  test_user.py
yaslis/: benchmark.py  book.py  cli.py  library.py  user.py  utils.py
